[optimizer] Harden metric scope filtering and merge semantics